--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,19 +1,19 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
+# CI name
 name: OWO
 
+# events which can trigger action 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
+  push: # when push commit
+    branches: [ main ] # specify the main branch
+  release: # when push a tag commit
     branches: [ main ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build: # job build
+    runs-on: ubuntu-latest # The type of machine to run the job on
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -24,3 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+  test: # job test
+    runs-on: ubuntu-latest
+    needs: [ build ] # dependency of job, i.e. run after build done
+  assemble: # job assemble
+    runs-on: ubuntu-latest
