--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,8 +24,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-  test: # job test
-    runs-on: ubuntu-latest
-    needs: [ build ] # dependency of job, i.e. run after build done
-  assemble: # job assemble
-    runs-on: ubuntu-latest
+  # test: # job test
+  #   runs-on: ubuntu-latest
+  #   needs: [ build ] # dependency of job, i.e. run after build done
+  # assemble: # job assemble
+  #   runs-on: ubuntu-latest
