--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build: # job build
     runs-on: ubuntu-latest # The type of machine to run the job on
-    steps:
+    steps: # a sequence of tasks
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
@@ -24,8 +24,26 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-  # test: # job test
-  #   runs-on: ubuntu-latest
-  #   needs: [ build ] # dependency of job, i.e. run after build done
+  test: # job test
+    runs-on: ubuntu-latest
+    needs: [ build ] # dependency of job, i.e. run after build done
+    steps:
+    - run: mkdir -p path/to/artifact
+    - run: echo hello > path/to/artifact/world.txt
+    - name: output test report
+    - uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: path/to/artifact/world.txt
+
   # assemble: # job assemble
   #   runs-on: ubuntu-latest
+  #   needs: [ test ]
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - uses: actions/setup-java@v1
+  #   - name: create jar file
+  #     uses: actions/upload-artifact@v2
+  #     with:
+  #       name: Package
+  #       path: build/libs
