--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,25 +24,32 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+      
   test: # job test
     runs-on: ubuntu-latest
     needs: [ build ] # dependency of job, i.e. run after build done
     steps:
     - uses: actions/checkout@v2
-    - name: get test report
+    - name: Upload test report
       uses: actions/upload-artifact@v2
       with:
         name: testReport
-        path: build/reports/tests/test/index.html
+        path: build/reports/tests/test/
 
-  # assemble: # job assemble
-  #   runs-on: ubuntu-latest
-  #   needs: [ test ]
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-java@v1
-  #   - name: create jar file
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: Package
-  #       path: build/libs
+  assemble: # job assemble
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Create jar file
+      run: ./gradlew jar
+    - name: Upload jar file
+      uses: actions/upload-artifact@v2
+      with:
+        name: buildJar
+        path: build/libs/OWO.jar
