--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,13 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+// generate manifest file
+jar {
+    manifest {
+        attributes('Main-Class': 'Main',
+                    'Manifest-Version': '1.0',
+                    "Class-Path": configurations.compile.collect { it.isDirectory() ? it : zipTree(it) })
+    }
+    archiveFileName = "OWO.jar"
+}
