--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,11 +24,16 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-    - uses: actions/cache@v2
+    - uses: actions/cache@v2 # build cache
       name: Cache test report
       with:
-        path: build/reports/tests/test # build cache
+        path: build/reports/tests/test
         key: test-report
+    - uses: actions/cache@v2 # build cache
+      name: Cache jar file
+      with:
+        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+        name: build-jar
 
   test: # job test
     runs-on: ubuntu-latest
@@ -40,30 +45,41 @@ jobs:
       with:
         path: build/reports/tests/test
         key: test-report
-
-    - name: Upload test report 
-      uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v2
+      name: Upload test report
       with:
         name: testReport
         path: build/reports/tests/test
 
   assemble: # job assemble
     runs-on: ubuntu-latest
+    needs: [ test ]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/cache@v2
+      name: Get jar cache
       with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Create jar file
-      run: ./gradlew jar
+        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+        key: build-jar
     - name: Upload jar file
       uses: actions/upload-artifact@v2
       with:
         name: buildJar
-        path: build/libs/OWO.jar
+        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
 
-  # release_jar:
-  #   runs-on: ubuntu-latest
+  Release:
+    if: ${{ github.event_name == 'release' }}
+    runs-on: ubuntu-latest
+    - uses: actions/checkout@v2
+    - name: Get jar file
+      uses: actions/upload-artifact@v2
+      with:
+        name: buildJar
+        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+    - name: release jar file
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
