--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,8 +8,6 @@ name: OWO
 on:
   push: # when push commit
     branches: [ main ] # specify the main branch
-  release: # when push a tag commit
-    branches: [ main ]
 
 jobs:
   build: # job build
@@ -68,18 +66,19 @@ jobs:
         path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
 
   Release:
-    if: github.event_name == 'release'
     runs-on: ubuntu-latest
-    - uses: actions/checkout@v2
-    - name: Get jar file
-      uses: actions/upload-artifact@v2
-      with:
-        name: buildJar
-        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
-    - name: release jar file
-      uses: softprops/action-gh-release@v1
+    steps:
       if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Get jar file
+        uses: actions/upload-artifact@v2
+        with:
+          name: buildJar
+          path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+      - name: release jar file
+        uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
