--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,6 +67,7 @@ jobs:
 
   Release:
     runs-on: ubuntu-latest
+    needs: [ assemble ]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v2
