--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,7 +7,9 @@ name: OWO
 # events which can trigger action 
 on:
   push: # when push commit
-    branches: [ main ] # specify the main branch
+    tags:
+      - '*'
+    # branches: [ main ] # specify the main branch
 
 jobs:
   build: # job build
