--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -75,10 +75,12 @@ jobs:
       with:
         path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
         key: buildJar
+    - run: pwd > qq.txt
     - name: release jar file
       uses: softprops/action-gh-release@v1
-      # if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+        files: |
+          build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+          qq.txt
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
