--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ on: push # when push commit
     # branches: [ main ] # specify the main branch
 
 jobs:
-  build: # job build
+  Build: # job build
     runs-on: ubuntu-latest # The type of machine to run the job on
     steps: # a sequence of tasks
     - uses: actions/checkout@v2
@@ -32,7 +32,7 @@ jobs:
         path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
         key: build-jar
 
-  test: # job test
+  Test: # job test
     runs-on: ubuntu-latest
     needs: [ build ] # dependency of job, i.e. run after build done
     steps:
@@ -48,7 +48,7 @@ jobs:
         name: testReport
         path: build/reports/tests/test
 
-  assemble: # job assemble
+  Assemble: # job assemble
     runs-on: ubuntu-latest
     needs: [ test ]
     steps:
@@ -70,17 +70,15 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v2
-    - name: Get jar file
-      uses: actions/upload-artifact@v2
+    - uses: actions/cache@v2
+      name: Get jar file  
       with:
         path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
         key: buildJar
-    - run: pwd > qq.txt
     - name: release jar file
       uses: softprops/action-gh-release@v1
       with:
         files: |
           build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
-          qq.txt
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
