--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
 }
 
+project_name 'st_nycu_lab-4'
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -37,6 +38,6 @@ jar {
     manifest {
         attributes('Main-Class': 'Main',
                     'Manifest-Version': '1.0',
-                    "Class-Path": configurations.compile.collect { it.isDirectory() ? it : zipTree(it) })
+        )
     }
 }
