--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ on: push # when push commit
     # branches: [ main ] # specify the main branch
 
 jobs:
-  Build: # job build
+  Compile: # job build
     runs-on: ubuntu-latest # The type of machine to run the job on
     steps: # a sequence of tasks
     - uses: actions/checkout@v2
@@ -19,29 +19,32 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Generate class
+      run: ./gradlew classes
     - uses: actions/cache@v2 # build cache
-      name: Cache test report
+      name: Cache dependencies
       with:
-        path: build/reports/tests/test
-        key: test-report
-    - uses: actions/cache@v2 # build cache
-      name: Cache jar file
-      with:
-        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
-        key: build-jar
+        path: .gradle
+        key: cache-dependencies
 
   Test: # job test
     runs-on: ubuntu-latest
     needs: [ build ] # dependency of job, i.e. run after build done
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      name: Get test report cache
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        path: build/reports/tests/test
-        key: test-report
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - uses: actions/cache@v2 # build cache
+      name: Cache dependencies
+      with:
+        path: .gradle
+        key: cache-dependencies
+    - name: Generate test report
+      run: ./gradlew test
     - uses: actions/upload-artifact@v2
       name: Upload test report
       with:
@@ -51,15 +54,28 @@ jobs:
   Assemble: # job assemble
     runs-on: ubuntu-latest
     needs: [ test ]
+    outputs:
+      jar_filename: ${{ steps.get_filename.outputs.filename }}
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      name: Get jar cache
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
-        key: build-jar
-    - name: Upload jar file
-      uses: actions/upload-artifact@v2
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - uses: actions/cache@v2 # build cache
+      name: Cache dependencies
+      with:
+        path: .gradle
+        key: cache-dependencies
+    - name: Assemble the Gradle
+      run: ./gradlew assemble
+    - id: get_filename
+      run: |
+        echo ::set-output name=filename::st_nycu_lab4-$(cat build.gradle | grep -E "version" | sed 's/version[ \t\n]*//g' | tr -d \').jar"
+    - uses: actions/upload-artifact@v2
+      name: Upload jar file
       with:
         name: buildJar
         path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
@@ -70,15 +86,16 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      name: Get jar file  
+    - uses: actions/download-artifact@v2
+      name: Download jar file
       with:
-        path: build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
-        key: build-jar
+        name: buildJar
+    - name: change name
+      run: mv buildJar ${{ steps.get_filename.outputs.filename }}
     - name: release jar file
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          build/libs/st_nycu_lab4-1.0-SNAPSHOT.jar
+          ${{ steps.get_filename.outputs.filename }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
