--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
 
   Test: # job test
     runs-on: ubuntu-latest
-    needs: [ build ] # dependency of job, i.e. run after build done
+    needs: [ Compile ] # dependency of job, i.e. run after build done
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -53,7 +53,7 @@ jobs:
 
   Assemble: # job assemble
     runs-on: ubuntu-latest
-    needs: [ test ]
+    needs: [ Test ]
     outputs:
       jar_filename: ${{ steps.get_filename.outputs.filename }}
     steps:
@@ -82,7 +82,7 @@ jobs:
 
   Release:
     runs-on: ubuntu-latest
-    needs: [ assemble ]
+    needs: [ Assemble ]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v2
