--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -82,7 +82,7 @@ jobs:
 
   Release:
     runs-on: ubuntu-latest
-    needs: [ Assemble ]
+    needs: Assemble
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/checkout@v2
@@ -91,7 +91,7 @@ jobs:
       with:
         name: buildJar
     - name: change name
-      run: mv buildJar ${{ needs.Assemble.steps.get_filename.outputs.filename }}
+      run: mv buildJar ${{ needs.Assemble.outputs.jar_filename }}
     - name: release jar file
       uses: softprops/action-gh-release@v1
       with:
