--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,11 +38,11 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - uses: actions/cache@v2 # build cache
-      name: Cache dependencies
-      with:
-        path: .gradle
-        key: cache-dependencies
+    # - uses: actions/cache@v2 # build cache
+    #   name: Cache dependencies
+    #   with:
+    #     path: .gradle
+    #     key: cache-dependencies
     - name: Generate test report
       run: ./gradlew test
     - uses: actions/upload-artifact@v2
