--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,8 +19,8 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Generate class
-      run: ./gradlew classes
+    - name: Compile java
+      run: ./gradlew compileJava
     - uses: actions/cache@v2 # build cache
       name: Cache dependencies
       with:
